// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Configure and manage Workloads, Endpoints etc.
package workload;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/pensando/sw/api/labels/selector.proto";

import "tenant.proto";
import "endpoint.proto";
import "workload.proto";

// endpoint REST API
service WorkloadV1 {
    // Prefix for all resources served by this service.
    option (venice.apiPrefix) = "workload";

    // API Version.
    option (venice.apiVersion) = "v1";

    option (venice.apiGrpcCrudService) = "Endpoint";
    option (venice.apiRestService) = {
        Object: "Endpoint"
        Method: [ "get", "list", "watch" ]
    };

    option (venice.apiGrpcCrudService) = "Workload";
    option (venice.apiRestService) = {
        Object: "Workload"
        Method: [ "get", "put", "delete", "post", "list", "watch", "label" ]
    };

    // Action to start migration.
    option (venice.apiAction) = {
     Object: "Workload"
     Action: "StartMigration"
     Request: "Workload"
     Response: "Workload"
     Desc: "Start Workload Migration operation"
    };

    // Action to initiate final sync for the migration.
    option (venice.apiAction) = {
     Object: "Workload"
     Action: "FinalSyncMigration"
     Request: "Workload"
     Response: "Workload"
     Desc: "Initiates the final sync for the Workload Migration operation"
    };

    // Action to finish migration.
    option (venice.apiAction) = {
     Object: "Workload"
     Action: "FinishMigration"
     Request: "Workload"
     Response: "Workload"
     Desc: "Finish Workload Migration operation"
    };

    // Action to abort migration.
    option (venice.apiAction) = {
     Object: "Workload"
     Action: "AbortMigration"
     Request: "Workload"
     Response: "Workload"
     Desc: "Abort Workload Migration operation"
    };
}
